--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		
 <ul type="1">
              <li><font face ="Arial"><a href = "./links/petla.html" target="strony">def pętli </br></a></li>
-             <li><a href = "./links/rodzaje.html" target="strony"> rodzaje pętli </br></a></font></li>
+             <li><a href = "./links/rodzaje.html" target="strony"> rodzaje pętli </br></a></li>
+	     <li><a href = "./links/algorytm.png" target="strony"> algorytm </br></a></font></li>
 			
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
