--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href = "./links/prz_27kod.html" target="strony"> zadanie 27 kod</br></li></a>
             <li><a href = "./links/SCREEN4.jpg" target="strony"> zadanie 27</br></li></a>
             <li><a href = "./links/prz_28kod.html" target="strony"> zadanie 28 kod</br></li></a>
-            <li><a href = "./links/SCREEN5.jpg" target="strony"> zadanie 28 </br></font></li></a>
+            <li><a href = "./links/SCREEN5.jpg" target="strony"> zadanie 28 </br></li></a>
+            <li><a href = "./links/algorytmy.html" target="strony"> algorytmy teoria </br></font></li></a>
 			
     
 </td>
