--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul type="1">
              <li><font face ="Arial"><a href = "./links/petla.html" target="strony">def pętli </br></a></li>
              <li><a href = "./links/rodzaje.html" target="strony"> rodzaje pętli </br></a></li>
-	     <li><a href = "./links/algorytm.png" target="strony"> algorytm </br></a></font></li>
+			 <li><a href = "./photos/algorytm.png" target="strony"> algorytm </br></a></li>
 			
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -24,13 +24,16 @@
    <h2> c++ codes </h2> </br>
 
 <ul type="1">
-            <li><P class="blocktext"><font face ="Arial"><a href = "./links/screen.jpg" target="strony">przykład 21</li></a>
+            <li><P class="blocktext"><font face ="Arial"><a href = "./photos/screen.jpg" target="strony">przykład 21</li></a>
             <li><a href = "./links/prz_21kod.html" target="strony" > zadanie 21 kod </br></li></a>
             <li><a href = "./links/prz_27kod.html" target="strony"> zadanie 27 kod</br></li></a>
-            <li><a href = "./links/SCREEN4.jpg" target="strony"> zadanie 27</br></li></a>
+            <li><a href = "./photos/SCREEN4.jpg" target="strony"> zadanie 27</br></li></a>
             <li><a href = "./links/prz_28kod.html" target="strony"> zadanie 28 kod</br></li></a>
-            <li><a href = "./links/SCREEN5.jpg" target="strony"> zadanie 28 </br></li></a>
-            <li><a href = "./links/algorytmy.html" target="strony"> algorytmy teoria </br></font></li></a>
+            <li><a href = "./photos/SCREEN5.jpg" target="strony"> zadanie 28 </br></li></a>
+            <li><a href = "./links/algorytmy.html" target="strony"> algorytmy teoria </br></li></a>
+            <li><a href = "./photos/SCREEN6.jpg" target="strony"> zadanie 30</br></li></a>
+            <li><a href = "./links/z30_kod.html" target="strony"> zadanie 30 kod</br></li></a>
+            
 			
     
 </td>
@@ -38,6 +41,6 @@
 </tr>
 </table>
 
-
+</font>
     </body>
     </html>
