--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <li><font face ="Arial"><a href = "./links/petla.html" target="strony">def pętli </br></a></li>
              <li><a href = "./links/rodzaje.html" target="strony"> rodzaje pętli </br></a></li>
 			 <li><a href = "./photos/algorytm.png" target="strony"> algorytm </br></a></li>
-			
+             <li><a href = "./links/algorytmy.html" target="strony"> algorytmy teoria </br></li></a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -30,9 +30,21 @@
             <li><a href = "./photos/SCREEN4.jpg" target="strony"> zadanie 27</br></li></a>
             <li><a href = "./links/prz_28kod.html" target="strony"> zadanie 28 kod</br></li></a>
             <li><a href = "./photos/SCREEN5.jpg" target="strony"> zadanie 28 </br></li></a>
-            <li><a href = "./links/algorytmy.html" target="strony"> algorytmy teoria </br></li></a>
             <li><a href = "./photos/SCREEN6.jpg" target="strony"> zadanie 30</br></li></a>
             <li><a href = "./links/z30_kod.html" target="strony"> zadanie 30 kod</br></li></a>
+            <li><a href = "./photos/SCREEN7.jpg" target="strony"> zadanie 30a etap1 </br></li></a>
+            <li><a href = "./links/30ae1_kod.html" target="strony"> zadanie 30a etap1 kod</br></li></a>
+            <li><a href = "./photos/SCREEN8_1.jpg" target="strony"> zadanie 30a etap2 </br></li></a>
+            <li><a href = "./photos/SCREEN9_1.jpg" target="strony"> zadanie 30a etap2 </br></li></a>
+            <li><a href = "./links/z30ae2_kod.html" target="strony"> zadanie 30a etap2 kod</br></li></a>
+            <li><a href = "./photos/SCREEN10.jpg" target="strony"> zadanie 30a etap3 </br></li></a>
+            <li><a href = "./links/z30ae3_kod.html" target="strony"> zadanie 30a etap3 kod</br></li></a>
+            <li><a href = "./photos/SCREEN11.jpg" target="strony"> zadanie 32a </br></li></a>
+            <li><a href = "./links/z32a_kod.html" target="strony"> zadanie 32a kod</br></li></a>
+            <li><a href = "./photos/SCREEN12.jpg" target="strony"> zadanie 32b </br></li></a>
+            <li><a href = "./links/z32b_kod.html" target="strony"> zadanie 32b kod </br></li></a>
+            <li><a href = "./photos/SCREEN13.jpg" target="strony"> zadanie 32c </br></li></a>
+            <li><a href = "./links/z32c_kod.html" target="strony"> zadanie 32c kod </br></li></a>
             
 			
     
