--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
              <li><a href = "./links/tabela.html" target="strony">zapisy matematyczne </br></li></a>
              <li><a href = "./links/definic.html" target="strony">inkrementacja i dekrementacja</br></li></a>
              <li><a href = "./links/sigma.html" target="strony">Znak sumy sigma </br></li></a>
+             <li><a href = "./links/eukides.html" target="strony"> Algorytm Eukliesa </br></li></a>
+             <li><a href = "./links/symulacja.html" target="strony"> Sumulacja Eukliesa </br></li></a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -59,6 +61,8 @@
             <li><a href = "./links/doskonala.html" target="strony"> doskonała kod </br></li></a>
             <li><a href = "./links/million_kod.html" target="strony"> million kod </br></li></a>
             <li><a href = "./photos/screen21.jpg" target="strony"> million </br></li></a>
+            <li><a href = "./photos/screen24.jpg" target="strony"> z1-pow-pętle </br></li></a>
+            <li><a href = "./links/z1_pow_pent.html" target="strony"> z1-pow-pętle kod </br></li></a>
             
     
 </td>
