--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             <li><a href = "./photos/screen21.jpg" target="strony"> million </br></li></a>
             <li><a href = "./photos/screen24.jpg" target="strony"> z1-pow-pętle </br></li></a>
             <li><a href = "./links/z1_pow_pent.html" target="strony"> z1-pow-pętle kod </br></li></a>
+            <li><a href = "./photos/screen25.jpg" target="strony"> z7-pow-pętle  </br></li></a>
+            <li><a href = "./links/poq7_kod.html" target="strony"> z7-pow-pętle kod </br></li></a>
             
     
 </td>
